# agn_id_autoencoder

./: .gitignore  README.md  ae_test.py  ae_test_sine.py  autoencoder.py  check_h5.py  check_part.sh  check_partial_writes.py  check_spec_for_float_cropping_issues.py  cnn_main.py  cnn_v1.py  cnn_v2.py  cnn_v3.py  common_region.json  datahandling.py  evaluate_ae.py  funcs.py  funcs_process_gals.py  get_stats_of_training.py  load_figs.py  mock_explore.py  mods.py  plot_5_random.py  plotting.py  private_key.ppk  process_galaxy_spectra.py  process_gals.py  process_gals_v2.py  process_specs.py  process_specs_agn.py  process_specs_gal.py  process_spectra.py  process_spectra.sh  pyproject.toml  readme.txt  reqs_ae.txt  run_ae.py  run_job_ae.sh  run_job_spec.sh  run_sae.py  (+24 more)
merged_spectra_gal/: mambo_13000110000176_z0.8005_1h_merged.fits  mambo_13000111000022_z0.8005_1h_merged.fits  mambo_13000111000147_z0.8009_1h_merged.fits  mambo_13000111000301_z0.8003_1h_merged.fits  mambo_13000111000413_z0.8008_1h_merged.fits  mambo_13000111000523_z0.8004_1h_merged.fits  mambo_13000111000626_z0.8008_1h_merged.fits  mambo_13000111000664_z0.8012_1h_merged.fits  mambo_13000111000766_z0.8003_1h_merged.fits  mambo_13000111000813_z0.8009_1h_merged.fits  mambo_13000111000854_z0.8004_1h_merged.fits  mambo_13000111000949_z0.8005_1h_merged.fits  mambo_13000170000022_z0.8008_1h_merged.fits  mambo_13000170000179_z0.8028_1h_merged.fits  mambo_13000170000424_z0.8001_1h_merged.fits  mambo_13000220000022_z0.8000_1h_merged.fits  mambo_13000220000059_z0.8005_1h_merged.fits  (+6055 more)
new_code/: data_utils.py  eg_main.py  (+3 more)
(+72 files in other folders)
