[project]
name = "autoencoder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["numpy",
                "scipy",
                "astropy",
                "matplotlib",
                "specutils",
                "torch",
                "torchvision",
                "scikit-learn"
                ]
