[project]
name = "autoencoder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["numpy",
                "scipy",
                "astropy",
                "matplotlib",
                "specutils",
                "torch",
                "torchvision",
                "torchaudio",
                "scikit-learn",
                "h5py",
				"wandb",
				"torchtext",
				"umap-learn",
                ]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cu126" }]
torchvision = [{ index = "pytorch-cu126" }]
torchaudio = [{ index = "pytorch-cu126" }]

[tool.ruff.format]
indent-style = "tab"